--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     }
   },
   "dependencies": {
+    "@discordjs/rest": "0.1.0-canary.0",
+    "discord-api-types": "^0.22.0",
     "discord.js": "^12.5.3",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.9",
